# clang_cms

./: .gitignore  CMakeLists.txt  Makefile  README.txt  cmake_install.cmake
cmake/modules/: FindClang.cmake  FindLLVM.cmake
scripts/: create_calls_db.sh  create_statics_esd_reports.sh  run_class_checker.sh  run_class_dumper.sh
src/: ArgSizeChecker.cpp  ArgSizeChecker.h  CMakeLists.txt  CatchAll.cpp  ClangCmsCheckerPluginRegister.cpp  ClassChecker.cpp  ClassChecker.h  ClassDumper.cpp  ClassDumper.h  CmsSupport.cpp  CmsSupport.h  ConstCastAwayChecker.cpp  ConstCastAwayChecker.h  ConstCastChecker.cpp  ConstCastChecker.h  EDMPluginDumper.h  FiniteMathChecker.h  FunctionChecker.cpp  FunctionChecker.h  FunctionDumper.cpp  FunctionDumper.h  GlobalStaticChecker.cpp  GlobalStaticChecker.h  MutableMemberChecker.cpp  MutableMemberChecker.h  StaticLocalChecker.cpp  StaticLocalChecker.h  ThrUnsafeFCallChecker.h  TrunCastChecker.cpp  TrunCastChecker.h  UsingNamespace.cpp  edmChecker.h  getByChecker.h  getParamDumper.cpp
test/: run-clang  run-scan
